k8/open-web-ui/service-open-webui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: open-webui
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/part-of: ai-demo
    app.openshift.io/runtime-version: main
  name: open-webui
spec:
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    app: open-webui
    deployment: open-webui
